--- a/src/app.json
+++ b/src/app.json
@@ -1,57 +1,57 @@
 {
-  "pages": [
-    "pages/hall/main",
-    "pages/mine/main",
-    "pages/fillName/main",
-    "pages/scanCode/main",
-    "pages/scanCodeRecord/main",
-    "pages/changePhone/main",
-    "pages/confirmProfession/main",
-    "pages/profession/main",
-    "pages/changeProfession/main",
-    "pages/scanCodeDetail/main",
-    "pages/scanCodeResult/main",
-    "pages/index/main",
-    "pages/logs/main",
-    "pages/counter/main"
-
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
-  },
-  "tabBar": {
-    "color": "#999",
-    "backgroundColor": "#fafafa",
-    "selectedColor": "#333",
-    "borderStyle": "white",
-
-    "list": [{
-      "text": "大厅",
-      "pagePath": "pages/hall/main",
-      "iconPath": "static/tabs/scanOn.png",
-      "selectedIconPath": "static/tabs/scanOff.png"
-    }, 
-    {
-      "text": "订单",
-      "pagePath": "pages/mine/main",
-      "iconPath": "static/tabs/mineOn.png",
-      "selectedIconPath": "static/tabs/mineOff.png"
+    "pages": [
+        "pages/hall/main",
+        "pages/mine/main",
+        "pages/fillName/main",
+        "pages/scanCode/main",
+        "pages/scanCodeRecord/main",
+        "pages/changePhone/main",
+        "pages/confirmProfession/main",
+        "pages/profession/main",
+        "pages/changeProfession/main",
+        "pages/scanCodeDetail/main",
+        "pages/scanCodeResult/main",
+        "pages/index/main",
+        "pages/logs/main",
+        "pages/counter/main",
+        "pages/order/main"
+    ],
+    "window": {
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "WeChat",
+        "navigationBarTextStyle": "black"
     },
-    {
-      "text": "我",
-      "pagePath": "pages/mine/main",
-      "iconPath": "static/tabs/mineOn.png",
-      "selectedIconPath": "static/tabs/mineOff.png"
+    "tabBar": {
+        "color": "#999",
+        "backgroundColor": "#fafafa",
+        "selectedColor": "#333",
+        "borderStyle": "white",
+
+        "list": [{
+                "text": "大厅",
+                "pagePath": "pages/hall/main",
+                "iconPath": "static/tabs/scanOn.png",
+                "selectedIconPath": "static/tabs/scanOff.png"
+            },
+            {
+                "text": "订单",
+                "pagePath": "pages/order/main",
+                "iconPath": "static/tabs/mineOn.png",
+                "selectedIconPath": "static/tabs/mineOff.png"
+            },
+            {
+                "text": "我",
+                "pagePath": "pages/mine/main",
+                "iconPath": "static/tabs/mineOn.png",
+                "selectedIconPath": "static/tabs/mineOff.png"
+            }
+        ],
+        "position": "bottom"
+    },
+    "permission": {
+        "scope.userLocation": {
+            "desc": "你的位置信息将用于提供更精准的用户信息"
+        }
     }
-  ],
-    "position": "bottom"
-  },
-  "permission": {
-    "scope.userLocation": {
-      "desc": "你的位置信息将用于提供更精准的用户信息"
-    }
-  }
 }
